# avr-atomic

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: makerelease.sh
src/: lib.rs
